# valkyrie-automata

./: .gitignore  LICENSE  README.md  echo.py  pulse.py  pyproject.toml
config/: default.yaml
skills/: moltbook_awaken.md
valkyrie/: __init__.py  drift.py  echo.py  mirror.py  pulse.py  reverie.py  run.py  skills.py  thread.py  update.py  weave.py
valkyrie/bus/: __init__.py  events.py  queue.py
valkyrie/channels/: __init__.py  base.py  manager.py  moltbook.py
valkyrie/lattice/: __init__.py  lattice__init__.py
valkyrie/platform/: moltbook.py
valkyrie/tools/: __init__.py  base.py  filesystem.py  skill_tools.py
valkyrie/util/: __init__.py  llm.py
