[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "valkyrie-automata"
version = "0.1.0"
description = "A cognitive architecture for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openrouter = ["httpx>=0.25"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
valkyrie = "valkyrie.run:main"

[tool.setuptools.packages.find]
include = ["valkyrie*"]
exclude = ["tests*", "forge*"]